--- a/maxwellequations.ipynb
+++ b/maxwellequations.ipynb
@@ -17,8 +17,7 @@
    "source": [
     "# Gauss' Law for Electric Fields\n",
     "\n",
-    "Integral form: $$ \\oiint \\limits_{\\partial \\Omega} \\mathbf{E} \\cdot d\\textbf{S} = \\frac{1}{\\epsilon_0} \n",
-    "\\iiint \\limits_{\\Omega} \\rho dV $$\n",
+    "Integral form: $$ \\oiint \\limits_{\\partial \\Omega} \\mathbf{E} \\cdot d\\textbf{S} = \\frac{1}{\\epsilon_0} \\iiint \\limits_{\\Omega} \\rho dV $$\n",
     "\n",
     "Differential form: $$\\nabla \\cdot \\mathbf{E} = \\frac{\\rho}{\\epsilon_0}$$"
    ]
