--- a/maxwellequations.ipynb
+++ b/maxwellequations.ipynb
@@ -17,8 +17,8 @@
    "source": [
     "# Gauss' Law for Electric Fields\n",
     "\n",
-    "Integral form: $$ \\oint \\limits_{\\partial \\Omega} \\mathbf{E} \\cdot d\\textbf{S} = $$ \n",
-    "$$ \\frac{1}{\\epsilon_0} \\iiint \\limits_{\\Omega} \\rho dV $$\n",
+    "Integral form: $$ \\oint \\limits_{S} \\mathbf{E} \\cdot d\\textbf{S} = $$ \n",
+    "$$ \\frac{1}{\\epsilon_0} \\iiint \\limits_{V} \\rho dV $$\n",
     "\n",
     "Differential form: $$\\nabla \\cdot \\mathbf{E} = \\frac{\\rho}{\\epsilon_0}$$"
    ]
