--- a/maxwellequations.ipynb
+++ b/maxwellequations.ipynb
@@ -17,8 +17,7 @@
    "source": [
     "# Gauss' Law for Electric Fields\n",
     "\n",
-    "Integral form: $$ \\oint \\limits_{S} \\mathbf{E} \\cdot d\\textbf{S} = $$ \n",
-    "$$ \\frac{1}{\\epsilon_0} \\iiint \\limits_{V} \\rho dV $$\n",
+    "Integral form: $$ \\oint \\limits_{S} \\mathbf{E} \\cdot d\\textbf{S} = \\frac{1}{\\epsilon_0} \\iiint \\limits_{V} \\rho dV $$\n",
     "\n",
     "Differential form: $$\\nabla \\cdot \\mathbf{E} = \\frac{\\rho}{\\epsilon_0}$$"
    ]
@@ -30,7 +29,7 @@
    "source": [
     "# Gauss' Law for Magnetic Fields\n",
     "\n",
-    "Integral form: $$\\oint \\limits_{\\partial \\Omega} \\textbf{B} \\cdot d\\textbf{S} = 0$$\n",
+    "Integral form: $$\\oint \\limits_{S} \\textbf{B} \\cdot d\\textbf{S} = 0$$\n",
     "\n",
     "Differential form: $$\\nabla \\cdot \\textbf{B} = 0$$"
    ]
