--- a/maxwellequations.ipynb
+++ b/maxwellequations.ipynb
@@ -41,7 +41,7 @@
    "source": [
     "# Faraday's Law of Induction\n",
     "\n",
-    "Integral form: $$\\oint \\limits_{\\partial \\Sigma} \\textbf{E} \\cdot d\\textbf{l} = -\\frac{d}{dt} \\iint \\limits_{\\Sigma} \\textbf{B} \\cdot d\\textbf{S}$$\n",
+    "Integral form: $$\\oint \\limits_{l} \\textbf{E} \\cdot d\\textbf{l} = -\\frac{d}{dt} \\iint \\limits_{S} \\textbf{B} \\cdot d\\textbf{S}$$\n",
     "\n",
     "Differential form: $$\\nabla \\times \\textbf{E} = -\\frac{\\partial \\textbf{B}}{\\partial t}$$"
    ]
