--- a/maxwellequations.ipynb
+++ b/maxwellequations.ipynb
@@ -53,7 +53,7 @@
    "source": [
     "# Ampère-Maxwell Circuital Law\n",
     "\n",
-    "Integral form: $$\\oint \\limits_{\\partial \\Sigma} \\textbf{B} \\cdot d\\textbf{l} = \\mu_0 \\bigg(\\iint \\limits_{\\Sigma}\\textbf{J} \\cdot d\\textbf{S} + \\epsilon_0 \\frac{d}{dt} \\iint \\limits_{\\Sigma} \\textbf{E} \\cdot d\\textbf{S}  \\bigg)$$\n",
+    "Integral form: $$\\oint \\limits_{l} \\textbf{B} \\cdot d\\textbf{l} = \\mu_0 \\bigg(\\iint \\limits_{S}\\textbf{J} \\cdot d\\textbf{S} + \\epsilon_0 \\frac{d}{dt} \\iint \\limits_{S} \\textbf{E} \\cdot d\\textbf{S}  \\bigg)$$\n",
     "\n",
     "Differential form: $$\\nabla \\times \\textbf{B} = \\mu_0 \\bigg(\\textbf{J} + \\epsilon_0 \\frac{\\partial \\textbf{E}}{\\partial t}  \\bigg)$$\n"
    ]
