--- a/maxwellequations.ipynb
+++ b/maxwellequations.ipynb
@@ -16,9 +16,7 @@
    "metadata": {},
    "source": [
     "# Gauss' Law for Electric Fields\n",
-    "Integral form: $$ \\oint \\limits_{S} \\mathbf{E} \\cdot d\\textbf{S} = \\frac{1}{\\epsilon_0} \\iiint \\limits_{V} \\rho dV $$\n",
-    "\n",
-    "Differential form: $$\\nabla \\cdot \\mathbf{E} = \\frac{\\rho}{\\epsilon_0}$$"
+    "Integral form: $$ \\oint \\limits_{S} \\mathbf{E} \\cdot d\\textbf{S} = \\frac{1}{\\epsilon_0} \\iiint \\limits_{V} \\rho dV \\quad Differential form: $$\\nabla \\cdot \\mathbf{E} = \\frac{\\rho}{\\epsilon_0}$$"
    ]
   },
   {
