--- a/scipyexperiment.ipynb
+++ b/scipyexperiment.ipynb
@@ -605,7 +605,7 @@
     " \n",
     " With an ansatz, which would either be $x(t) = A\\cos(\\omega t)$ or $x(t) = A\\sin(\\omega t)$, using chain rules to get the second-order derivative of $x(t)$ and then substituting $\\frac{k}{m}$ results in:\n",
     "\n",
-    "$$\\ddot{x} = \\omega ^2 x $$\n",
+    "$$\\ddot{x} = - \\omega ^2 x $$\n",
     "\n",
     "where $\\omega = \\sqrt{\\frac{k}{m}}$, the angular frequency."
    ]
