--- a/scipyexperiment.ipynb
+++ b/scipyexperiment.ipynb
@@ -599,7 +599,7 @@
    "source": [
     "The ODE for simple harmonic motion:\n",
     "\n",
-    "$$\\ddot{x} = \\frac{k}{m} x(t)$$\n",
+    "$$\\ddot{x} = - \\frac{k}{m} x(t)$$\n",
     "\n",
     "$k$ is the spring constant, $m$ is the mass attached to the spring, and $x$ is the displacement of the spring which is a function of time.\n",
     " \n",
